...
                android:textSize="25dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView12" />

            <EditText
                android:id="@+id/profile_bio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginLeft="64dp"
                android:layout_marginEnd="64dp"
                android:layout_marginRight="64dp"
...
                android:textSize="25dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_bio" />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
...
                android:textSize="25dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView21" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
...
                android:textSize="25dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView22" />

            <Spinner
                android:id="@+id/spinner3"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
...
                android:textSize="25dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView23" />

            <Spinner
                android:id="@+id/spinner4"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
...
                android:textSize="25dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView24" />

            <Spinner
                android:id="@+id/spinner5"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
...
                android:text="Cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView25" />

            <Button
                android:id="@+id/edit_profile_save"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_marginTop="136dp"
                android:layout_marginEnd="132dp"
                android:layout_marginRight="132dp"
                android:layout_marginBottom="150dp"
...
                android:layout_marginTop="24dp"
                android:text="Weight"
                app:layout_constraintStart_toEndOf="@+id/spinner1"
                app:layout_constraintTop_toBottomOf="@+id/textView21" />

            <EditText
                android:id="@+id/edit_profile_weight1"
                android:layout_width="50dp"
                android:layout_height="43dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
...
                android:layout_marginTop="24dp"
                android:text="Weight"
                app:layout_constraintStart_toEndOf="@+id/spinner2"
                app:layout_constraintTop_toBottomOf="@+id/textView22" />

            <EditText
                android:id="@+id/edit_profile_weight2"
                android:layout_width="50dp"
                android:layout_height="43dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:ems="10"
...
                android:layout_marginTop="32dp"
                android:text="Weight"
                app:layout_constraintStart_toEndOf="@+id/spinner3"
                app:layout_constraintTop_toBottomOf="@+id/textView23" />

            <EditText
                android:id="@+id/edit_profile_weight3"
                android:layout_width="50dp"
                android:layout_height="43dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:ems="10"
...
                android:layout_marginTop="32dp"
                android:text="Weight"
                app:layout_constraintStart_toEndOf="@+id/spinner4"
                app:layout_constraintTop_toBottomOf="@+id/textView24" />

            <EditText
                android:id="@+id/edit_profile_weight4"
                android:layout_width="50dp"
                android:layout_height="43dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:ems="10"
...
                android:layout_marginTop="32dp"
                android:text="Weight"
                app:layout_constraintStart_toEndOf="@+id/spinner5"
                app:layout_constraintTop_toBottomOf="@+id/textView25" />

            <EditText
                android:id="@+id/edit_profile_weight5"
                android:layout_width="50dp"
                android:layout_height="43dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:ems="10"
...
