...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_name" />

            <ImageView
                android:id="@+id/settings"
                android:layout_width="46dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:src="@mipmap/gear"
...
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="Do you like coffee? "
                android:textSize="25dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_answer1" />


            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="Would you like your partner taller than you?"
                android:textSize="25dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_answer2" />


            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                android:textSize="25dp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/profile_answer5"
                app:layout_constraintTop_toBottomOf="@+id/textView20" />

            <TextView
                android:id="@+id/profile_weight1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:text="TextView"
...
                app:layout_constraintStart_toEndOf="@+id/textView36"
                app:layout_constraintTop_toBottomOf="@+id/textView16" />

            /

            <TextView
                android:id="@+id/profile_weight2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:text="TextView"
...
                android:text="TextView"
                android:textSize="25dp"
                app:layout_constraintStart_toEndOf="@+id/textView40"
                app:layout_constraintTop_toBottomOf="@+id/textView20" />

            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="28dp"
                android:text="Sign Out"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
...
